--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:design:25.3.1'
+    compile 'com.firebase:firebase-jobdispatcher:0.5.0'
 }
